--- a/domain/pom.xml
+++ b/domain/pom.xml
@@ -3,10 +3,20 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>ru.job4j</groupId>
-        <artifactId>job4j_fast_foot</artifactId>
+        <artifactId>job4j_fast_food</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <artifactId>domain</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
+
+    <dependencies>
+
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.22</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
 </project>
