--- a/payment/pom.xml
+++ b/payment/pom.xml
@@ -3,10 +3,18 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>ru.job4j</groupId>
-        <artifactId>job4j_fast_foot</artifactId>
+        <artifactId>job4j_fast_food</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <artifactId>payment</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
+
+    <dependencies>
+        <dependency>
+            <groupId>ru.job4j</groupId>
+            <artifactId>domain</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
 </project>
