--- a/pom.xml
+++ b/pom.xml
@@ -3,10 +3,10 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>ru.job4j</groupId>
-  <artifactId>job4j_fast_foot</artifactId>
+  <artifactId>job4j_fast_food</artifactId>
   <version>1.0-SNAPSHOT</version>
   <packaging>pom</packaging>
-  <name>job4j_fast_foot</name>
+  <name>job4j_fast_food</name>
   <url>http://job4j.ru</url>
 
   <modules>
@@ -25,6 +25,15 @@
     <maven.compiler.target>18</maven.compiler.target>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
+
+  <dependencies>
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+      <version>1.18.22</version>
+      <scope>provided</scope>
+    </dependency>
+  </dependencies>
 
   <build>
     <plugins>
