--- a/notification/src/main/resources/application.properties
+++ b/notification/src/main/resources/application.properties
@@ -6,8 +6,12 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 server.error.include-message=always
-server.port=8081
+server.port=8083
 
 #Liquibase
 spring.liquibase.change-log=classpath:liquibase-changelog.xml
 spring.liquibase.enabled=true
+
+#Kafka
+spring.kafka.consumer.group-id=app.1
+spring.kafka.bootstrap-servers=localhost:9092
